--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#599AEA</color>
-    <color name="colorPrimaryDark">#0C6CB7</color>
-    <color name="colorAccent">#90CBFF</color>
+    <color name="colorPrimary">#ff8800</color>
+    <color name="colorPrimaryDark">#ff8800</color>
+    <color name="colorAccent">#ff8800</color>
     <color name="white">#ffffff</color>
+    <color name="background">#d1c986</color>
     <color name="indigo_500">#3f51b5</color>
     <color name="indigo_700">#303f9f</color>
     <color name="cyan_500">#00bcd4</color>
+    <color name="black">#000000</color>
+    <color name="creamy">#f2e8c9</color>
 </resources>
