--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,16 +5,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:fitsSystemWindows="true"
+    android:background="@drawable/animation_list"
+    android:id="@+id/container1"
+    >
 
-    <com.gjiazhe.panoramaimageview.PanoramaImageView
-        android:id="@+id/panorama_image_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/img"
-        app:piv_enablePanoramaMode="true"
-        app:piv_show_scrollbar="false"
-        app:piv_invertScrollDirection="false" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -66,7 +61,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/Button_marginVertical"
-            android:background="@color/colorAccent"
+            android:background="@color/white"
+            android:textColor="@color/black"
             android:text="@string/btn_login" />
 
         <Button
