--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,8 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="TransparentButton" parent="Widget.MaterialComponents.Button.TextButton" />
+    <style name="TransparentButton" parent="Widget.MaterialComponents.Button.TextButton"/>
+
+    <style name="TextInputLayout" parent="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
 
 </resources>
