--- a/app/src/main/res/drawable/animation_list.xml
+++ b/app/src/main/res/drawable/animation_list.xml
@@ -15,4 +15,7 @@
     <item
         android:drawable="@drawable/color5"
         android:duration="2000" />
+    <item
+        android:drawable="@drawable/color6"
+        android:duration="2000"/>
 </animation-list>
