--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -82,33 +82,19 @@
                 android:textColorHint="@color/white"
                 app:errorEnabled="true" />
         </com.google.android.material.textfield.TextInputLayout>
-        <!-- Login Button -->
 
-
-        <Button
-            android:id="@+id/sign_up_button"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_signup"
+            style="@style/Widget.MaterialComponents.Button"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginTop="@dimen/Button_marginVertical"
-            android:background="@color/colorAccent"
-            android:text="@string/action_sign_in_short"
-            android:textColor="@android:color/black" />
-        <Button
-            android:id="@+id/btn_reset_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/Button_marginVertical"
-            android:background="@null"
-            android:text="@string/btn_forgot_password"
-            android:textAllCaps="false"
-            android:textColor="@color/white" />
+            android:text="@string/btn_signup"
+            android:textColor="@color/black" />
 
-
-        <!-- Link to Login Screen -->
-
-
-        <Button
-            android:id="@+id/sign_in_button"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_login"
+            style="@style/TransparentButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/Button_marginVertical"
@@ -116,6 +102,21 @@
             android:text="@string/btn_link_to_login"
             android:textAllCaps="false"
             android:textColor="@color/white" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_reset_password"
+            style="@style/TransparentButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/Button_marginVertical"
+            android:text="@string/btn_forgot_password"
+            android:textAllCaps="false"
+            android:textColor="@color/white" />
+
+
+
+
+
 
     </LinearLayout>
 
