--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -15,6 +15,17 @@
         android:gravity="center"
         android:orientation="vertical"
         android:padding="@dimen/activity_horizontal_margin">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:gravity="center_horizontal"
+            android:padding="20dp"
+            android:text="@string/txt_signup"
+            android:textColor="@color/white"
+            android:textSize="36sp"
+            android:textStyle="" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/us_name_text_input_layout"
