--- a/app/src/main/res/navigation/registration_graph.xml
+++ b/app/src/main/res/navigation/registration_graph.xml
@@ -10,4 +10,8 @@
         android:name="com.kamil184.lingly.main.authorization.Registration.sign_up.SignUpFragment"
         android:label="activity_signup"
         tools:layout="@layout/activity_signup" />
+    <fragment
+        android:id="@+id/extraInfo"
+        android:name="com.kamil184.lingly.main.authorization.Registration.sign_up.ExtraUserInfoFragment"
+        tools:layout="@layout/fragment_extrauserinfo"/>
 </navigation>
