--- a/app/src/main/res/layout/fragment_extrauserinfo.xml
+++ b/app/src/main/res/layout/fragment_extrauserinfo.xml
@@ -101,4 +101,12 @@
             android:textColor="@color/black" />
 
     </LinearLayout>
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="@dimen/ProgressBar_size"
+        android:layout_height="@dimen/ProgressBar_size"
+        android:layout_gravity="center|bottom"
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:visibility="gone" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
