--- a/app/src/main/res/layout/set_language_item.xml
+++ b/app/src/main/res/layout/set_language_item.xml
@@ -9,14 +9,17 @@
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/country_image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_cn"/>
 
     <TextView
+        android:text="Китайский"
         android:id="@+id/country_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:layout_marginTop="@dimen/default_padding_top"/>
+        android:textSize="18sp"
+        android:layout_marginTop="@dimen/default_padding_top"
+        android:layout_marginStart="@dimen/default_padding_top"
+        android:layout_marginEnd="@dimen/default_padding_top" />
 
 </LinearLayout>
