--- a/app/src/main/res/navigation/registration_graph.xml
+++ b/app/src/main/res/navigation/registration_graph.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/registration_graph"
-    app:startDestination="@id/nativeLanguageFragment">
+    app:startDestination="@id/extraInfo">
 
     <fragment
         android:id="@+id/signUpActivity"
@@ -15,12 +15,12 @@
         android:name="com.kamil184.lingly.main.authorization.Registration.sign_up.ExtraUserInfoFragment"
         tools:layout="@layout/fragment_extrauserinfo"/>
     <fragment
-        android:id="@+id/nativeLanguageFragment"
+        android:id="@+id/nativeLanguage"
         android:name="com.kamil184.lingly.main.authorization.Registration.native_language.NativeLanguageFragment"
         android:label="fragment_native_language"
         tools:layout="@layout/fragment_native_language" />
     <fragment
-        android:id="@+id/nonNativeLanguageFragment"
+        android:id="@+id/nonNativeLanguage"
         android:name="com.kamil184.lingly.main.authorization.Registration.non_native_language.NonNativeLanguageFragment"
         android:label="NonNativeLanguageFragment" />
 </navigation>
