--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.flipboard.bottomsheet.BottomSheetLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/bottomsheet"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:layout_marginBottom="50dp">
+<ScrollView
     android:id="@+id/container1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/animation_list"
     android:orientation="vertical"
-    android:layout_marginBottom="50dp">
+   >
 
 
         <LinearLayout
@@ -18,31 +24,47 @@
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView"
+                app:cardBackgroundColor="@color/transparent"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/transparent"
                 app:layout_constraintTop_toTopOf="parent">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:orientation="vertical">
-
-                    <ImageView
-                        android:id="@+id/user_avatar"
+                    <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:layout_height="200dp"
-                        android:contentDescription='"Аватарка"'
-                        android:src="@drawable/color7"
-                        tools:srcCompat="@drawable/color7" />
+                        android:layout_height="wrap_content"
+                        >
+                        <ImageView
+                            android:id="@+id/user_avatar"
+                            android:layout_width="350dp"
+                            android:layout_height="200dp"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toStartOf="parent" />
+
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/avatar_btn"
+                            style="@style/Widget.MaterialComponents.Button.TextButton.Dialog"
+                            android:layout_width="50dp"
+                            android:layout_height="65dp"
+                            android:textColor="@color/black"
+                            app:icon="@android:drawable/ic_menu_camera"
+                            app:layout_constraintBottom_toBottomOf="@id/user_avatar"
+                            app:layout_constraintEnd_toEndOf="@id/user_avatar" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
 
                     <com.google.android.material.button.MaterialButton
-                        android:id="@+id/button4"
+                        android:id="@+id/edit_btn"
                         style="@style/Widget.MaterialComponents.Button"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Button"
-                        android:textColor="@color/black" />
+                        android:textColor="@color/black"
+                        android:text="@string/edit_btn"
+                        />
 
                 </LinearLayout>
 
@@ -50,7 +72,8 @@
 
             <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp">
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -165,7 +188,12 @@
                         android:text="Изучает"
                         android:layout_marginStart="4dp"/>
 
+                    <ListView
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        >
 
+                    </ListView>
 
                     <View
                         android:layout_width="match_parent"
@@ -193,3 +221,4 @@
 
         </LinearLayout>
 </ScrollView>
+</com.flipboard.bottomsheet.BottomSheetLayout>
