--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
+    <dimen name="profile_margin">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">10dp</dimen>
     <dimen name="logo_w_h">100dp</dimen>
@@ -14,6 +15,6 @@
     <dimen name="forgot_your_password_textSize">20sp</dimen>
     <dimen name="RatingBar_width">240dp</dimen>
     <dimen name="test_view_frameLayout_height">49dp</dimen>
-    <dimen name="app_bar_height">180dp</dimen>
+    <dimen name="app_bar_height">300dp</dimen>
     <dimen name="text_margin">16dp</dimen>
 </resources>
