--- a/app/src/main/res/layout/fragment_non_native_language.xml
+++ b/app/src/main/res/layout/fragment_non_native_language.xml
@@ -39,10 +39,10 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/activity_horizontal_margin"
-            card_view:cardCornerRadius="6dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            card_view:cardCornerRadius="6dp">
 
             <ListView
                 android:id="@+id/non_native_language_list"
