--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -17,4 +17,11 @@
     <dimen name="test_view_frameLayout_height">49dp</dimen>
     <dimen name="app_bar_height">300dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+    <dimen name="corners_language_level">20dp</dimen>
+    <dimen name="language_level_width">20dp</dimen>
+    <dimen name="language_level1_height">20dp</dimen>
+    <dimen name="language_level2_height">32dp</dimen>
+    <dimen name="language_level3_height">44dp</dimen>
+    <dimen name="language_level4_height">56dp</dimen>
+    <dimen name="language_level5_height">68dp</dimen>
 </resources>
