--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.coordinatorlayout.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
     android:background="@color/colorPrimary"
-    android:fitsSystemWindows="true"
-    >
+    android:fitsSystemWindows="true">
 
 
     <LinearLayout
@@ -44,8 +42,7 @@
             android:textCursorDrawable="@drawable/text_cursor_cyan"
             app:met_baseColor="@android:color/white"
             app:met_floatingLabel="highlight"
-            app:met_primaryColor="?colorAccent"
-            />
+            app:met_primaryColor="?colorAccent" />
 
         <!-- Login Button -->
 
