--- a/app/src/main/res/layout/fragment_extrauserinfo.xml
+++ b/app/src/main/res/layout/fragment_extrauserinfo.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:id="@+id/container"
-    android:background="@drawable/animation_list">
+    android:background="@drawable/animation_list"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,61 +26,61 @@
             android:textSize="36sp"
             android:textStyle="" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/first_name_text_input_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorTextColor="@color/white"
-        style="@style/TextInputLayout"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/first_name"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/first_name_text_input_layout"
+            style="@style/TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:hint="@string/first_name"
-            android:inputType="textPersonName"
-            android:textColorHint="@color/white"
-            app:errorEnabled="true" />
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:errorTextColor="@color/white">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/first_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:hint="@string/first_name"
+                android:inputType="textPersonName"
+                android:textColorHint="@color/white"
+                app:errorEnabled="true" />
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/second_name_text_input_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:errorTextColor="@color/white"
-        style="@style/TextInputLayout"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp">
+        </com.google.android.material.textfield.TextInputLayout>
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/second_name"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/second_name_text_input_layout"
+            style="@style/TextInputLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:hint="@string/second_name"
-            android:inputType="textPersonName"
-            android:textColorHint="@color/white"
-            app:errorEnabled="true" />
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            app:errorTextColor="@color/white">
 
-    </com.google.android.material.textfield.TextInputLayout>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/second_name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:adjustViewBounds="true"
+                android:hint="@string/second_name"
+                android:inputType="textPersonName"
+                android:textColorHint="@color/white"
+                app:errorEnabled="true" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <TextView
+            android:id="@+id/birth_date_txt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="5dp"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="5dp"
             android:gravity="center_horizontal"
             android:padding="5dp"
             android:text="@string/date_of_birth"
             android:textColor="@color/white"
             android:textSize="16sp"
-            android:textStyle=""
-            android:id="@+id/birth_date_txt"/>
+            android:textStyle="" />
 
         <DatePicker
             android:id="@+id/datePicker"
